--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -31,30 +31,37 @@
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.6/socket.io.min.js"></script>
 
-        <script type="text/javascript">
-        
-            $(document).ready(function(){
+    <script type="text/javascript">
+    
+        $(document).ready(function(){
 
-                const animationDelay = 1000,
-                // letters effect
-                lettersDelay = 100,
-                // time interval param
-                timeInterval = 2000,
-                showCnt = 2; // timeInterval * showCnt (ms)
+            const animationDelay = 2000,
+            // letters effect
+            lettersDelay = 100,
+            // time interval param
+            timeInterval = 2000,
+            showCnt = 2; // timeInterval * showCnt (ms)
 
-                let count = 0;
-                let httpRequest;
-                console.log("http://"+document.domain+":"+location.port+"/mynamespace");
-                var socket = io.connect("http://"+document.domain+":"+location.port+"/mynamespace");
-                socket.on('response',function(msg){
-                    console.log(msg.data);
-                    showRes(msg.data);
-                });
-                socket.emit("request",{data: "22"});
-                function showRes(result){
+            let count = 0;
+            setInterval(function(){ 
+                    console.log(count);
+                    if(count===0){showRes("NA");} 
+                    else{count = 0;} 
+                }, animationDelay);
+
+            let httpRequest;
+            console.log("http://"+document.domain+":"+location.port+"/mynamespace");
+            var socket = io.connect("http://"+document.domain+":"+location.port+"/mynamespace");
+            socket.on('response',function(msg){
+                count = 1;
+                console.log(msg.data);
+                showRes(msg.data);
+            });
+
+
+            function showRes(result){
                 let headline = $('.box-headline');
                 let resTxt = $('.res-text');
-                console.log(result)
                 word = headline.find('.is-visible').eq(0);
 
                 // if the crrunt word is not same with the next word
@@ -83,12 +90,14 @@
                                 count = 1;
                             }
                         }
-                    }
+                    }    
                     // change the intro word
                     hideWord(word,nextWord);
 
                 }		
             }
+
+
             function hideWord($word,$nextWord) {
 
                 if($word.parents('.box-headline').hasClass('letters')) {
@@ -122,33 +131,22 @@
             }
 
                  
-            });
+        });
 
             
         
-        </script>
+    </script>
 
 </head>
 
 <body>
-
-    <!-- Preloader -->
-    <div id="preloader">
-        <div class="pre-container">
-            <div class="spinner">
-                <div class="double-bounce1"></div>
-                <div class="double-bounce2"></div>
-            </div>
-        </div>
-    </div>
-    <!-- end Preloader -->
 
     <div class="container-fluid">
         <!-- box header -->
         <header class="box-header">
             <div class="box-logo">
                 
-                <a href="/"><img src="{{url_for('static', filename='img/logo_keti.jpg')}}" width="300" alt="Logo"></a>
+                <a href="/"><img src="{{url_for('static', filename='img/decenterLOGO.png')}}" width="200" alt="Logo"></a>
             </div>
 
         </header>
@@ -159,7 +157,7 @@
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
-                        <b class="is-visible NA">KETI.</b>
+                        <b class="is-visible NA">WELCOME.</b>
                         <b class="A">GROUP A.</b>
                         <b class="B">GROUP B.</b>
                     </span>
@@ -177,7 +175,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© KETI & DECENTER 2020</p>
+            <p class="copyright">© DECENTER 2020</p>
         </div>
     </footer>
     <!-- end footer -->
@@ -185,8 +183,6 @@
     <!-- back to top -->
     <a href="#0" class="cd-top"><i class="ion-android-arrow-up"></i></a>
     <!-- end back to top -->
-
-
 
    
 
