--- a/flask/src/webapp/static/css/style.css
+++ b/flask/src/webapp/static/css/style.css
@@ -449,6 +449,10 @@ b i:last-child {
     line-height: 1.7
 }
 
+.res-text{
+    font-size: large;
+}
+
 
 /* mouse effect */
 
@@ -528,7 +532,7 @@ b i:last-child {
 /* text rotate */
 
 .box-headline {
-    font-size: 130px;
+    font-size: 180px;
     line-height: 1.0;
 }
 
