Update font size, image size

--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -156,7 +156,7 @@
         <header class="box-header">
             <div class="box-logo">
                 
-                <a href="/"><img src="{{url_for('static', filename='img/decenterLOGO.png')}}" width="200" alt="Logo"></a>
+                <a href="/"><img src="{{url_for('static', filename='img/decenterLOGO.png')}}" width="15%" alt="Logo"></a>
             </div>
 
         </header>
