--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="icon" href="img/fav.png" type="image/x-icon"> -->
 
     <!-- Bootstrap -->
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <!-- <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet"> -->
     <link href="{{ url_for('static', filename='ionicons/css/ionicons.min.css') }}" rel="stylesheet">
 
     <!-- main css -->
@@ -88,7 +88,7 @@
 
 
     <!--  custom script -->
-    <script src="{{url_for('static', filename='js/custom.js')}}"></script>
+    <script src="{{url_for('static', filename='js/custom-move.js')}}"></script>
 
 </body>
 
