--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -20,6 +20,9 @@
     <!-- modernizr -->
     <script src="{{ url_for('static', filename='js/modernizr.js') }}"></script>
 
+    <!-- socket -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+
 </head>
 
 <body>
