Updaet for demo

--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -43,7 +43,7 @@
         <header class="box-header">
             <div class="box-logo">
                 
-                <a href="/"><img src="{{url_for('static', filename='img/decenterLOGO.png')}}" width="20%" alt="Logo"></a>
+                <a href="/"><img src="{{url_for('static', filename='img/decenterLOGO.png')}}" width="40%" alt="Logo"></a>
             </div>
 
         </header>
@@ -59,7 +59,7 @@
                         <b class="B">GROUP B.</b>
                     </span>
 		        </h1>
-                <h5 class="res-text">Ambient intelligence for office environments</h5>
+                <h5 class="res-text">Ambient intelligence<br>for office environments</h5>
             </div>
 
             <!-- <div class="mouse">
