--- a/flask/src/webapp/templates/index.html
+++ b/flask/src/webapp/templates/index.html
@@ -53,10 +53,11 @@
         <section class="box-intro">
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
+                    
                     <span class="box-words-wrapper">
                         <b class="is-visible NA">WELCOME.</b>
-                        <b class="A">GROUP A.</b>
-                        <b class="B">GROUP B.</b>
+                        <b class="A">KETI.</b>
+                        <b class="B">SNU.</b>
                     </span>
 		        </h1>
                 <h5 class="res-text">Ambient intelligence<br>for office environments</h5>
